--- a/src/app/phone/phone.component.scss
+++ b/src/app/phone/phone.component.scss
@@ -10,35 +10,25 @@
 
 .phone-body {
     width: 400px;
-    height: 800px;
+    height: 780px;
 
     background-color: black;
-    border-radius: 20px;
+    border-radius: 30px;
+    border-color: silver;
+    border-width: 6px;
+    border-style: solid;
 
     padding: 20px 10px;
 
-    box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.5), 3px 5px 10px rgb(255, 255, 255, 0.9) inset;
+    box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.5);
 }
 
-.phone-screen {
-    width: 390px;
-    height: 780px;
-
-    background-color: white;
-    border-radius: 10px;
-
-    margin: auto;
-    vertical-align: middle;
-
-    box-shadow: 2px 0px 20px rgb(35, 65, 75) inset, 3px 4px 10px rgba(255, 255, 255, 0.6),;
-}
-
-.phone-navigation {
+.camera {
     position: relative;
-    left: 100px;
-    top: 720px;
-}
+    top: -835px;
+    left: 185px;
 
-.navigation-buttons {
-    margin: 5px;
+    padding: 5px;
+    text-shadow: 0px 1px 6px rgb(35, 65, 75, .7);
+    color: black;
 }
